<resources>
    <string name="app_name">HabitWise</string>
    <string name="signup">SIGNUP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="login">Login</string>
    <string name="add_photo">Add photo!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="friend_s_name">Friend\'s Name</string>
    <string name="add_friend">Add Friend</string>
</resources>