<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUserProfileImage"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:src="@drawable/ic_baseline_person_24"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="3">
        <TextView
            android:id="@+id/tvFriendName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/friend_s_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/accept"
                android:background="@drawable/button_accent"
                android:textColor="@color/white"
                tools:text="Accept" />

            <Button
                android:id="@+id/btnDecline"
                android:layout_marginLeft="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/decline"
                android:background="@drawable/button_light"
                tools:text="Decline" />

        </LinearLayout>
    </LinearLayout>



</LinearLayout>